--- a/assignment2/Clustering_GMM.ipynb
+++ b/assignment2/Clustering_GMM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Clustering_GMM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPS+5ADVK9Nycp1+f4Yjwmb",
+      "authorship_tag": "ABX9TyPM3KdzGtrF6IRe1aTSdLhV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1546,6 +1546,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "15ixq6VaHmR3",
+        "colab_type": "text"
+      },
+      "source": [
+        "###After comparing the clusters formed by kmeans and GaussianMixture, we can see how the clusters are grouped together. There is some changes in the cluster groups as both algorithms use different calculation metrices to group them and the clusters formed by GMM seems more accurate than the K-means."
       ]
     }
   ]
