--- a/Alternus_Vera/AlternusVera_Sprint4_Clickbait.ipynb
+++ b/Alternus_Vera/AlternusVera_Sprint4_Clickbait.ipynb
@@ -52,7 +52,7 @@
         "- News Category Dataset\n",
         "\n",
         "\n",
-        "Github URL: "
+        "Github URL: https://github.com/Ranjani94/Machine_Learning/blob/master/Alternus_Vera/AlternusVera_Sprint4_Clickbait.ipynb"
       ]
     },
     {
